# RMP-Dashboard

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
data/: school_data.json  school_names.json
data/dataframes/: Abilene Christian University.parquet  Abraham Baldwin Agricultural College.parquet  Academy of Art University.parquet  Adams State University.parquet  Adelphi University.parquet  Agnes Scott College.parquet  Air Force Institute of Technology.parquet  Air University.parquet  Alabama A&M University.parquet  Alabama State University.parquet  Alaska Pacific University.parquet  Albany College of Pharmacy and Health Sciences.parquet  Albany State University.parquet  Albertus Magnus College.parquet  Albion College.parquet  Albright College.parquet  Alcorn State University.parquet  Alderson Broaddus University.parquet  Alfred University.parquet  Alice Lloyd College.parquet  Allegheny College.parquet  Alma College.parquet  Alvernia University.parquet  Alverno College.parquet  American International College.parquet  American River College.parquet  American University.parquet  Amherst College.parquet  Anderson University.parquet  Andrews University.parquet  Angelo State University.parquet  Anna Maria College.parquet  Antioch College.parquet  Antioch University.parquet  Antioch University: Los Angeles.parquet  Appalachian State University.parquet  Aquinas College.parquet  (+305 more)
db/: schema.sql
src/: parse_professors.py  scraping.py  seeding.py
templates/: base.html  comparison.html  departments.html  index.html  scrape.html
(+1 files in other folders)
